Chaned root file in render to . and changed requirements.txt in root

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-streamlit
 python-dotenv
 requests
 fastapi
 uvicorn[standard]
 pydantic
 PyYAML
-python-multipart
+
 langchain
 langchain-groq
-requests-cache 
-retry-requests 
-numpy 
+langgraph
+
+requests-cache
+retry-requests
+numpy
 pandas
 openmeteo-requests
 tavily-python
 sqlalchemy
-
